--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required(VERSION 3.6)
 project(jcurl)
+
 add_subdirectory(src/main/cpp/Json/lib_json)
-#find_package(JNI)
+#add_subdirectory(src/main/cpp/curl)
 set(SWIG_SOURCE_FILE src/main/cpp/curljni.i)
 SET(SWIG_CPP_OUT_FILE_NAME src/main/cpp/curljni.c)
 SET(SWIG_JAVA_OUT_DIR src/main/java/s/docker/com/jcurl)
 SET(SWIG_JAVA_PACKAGE s.docker.com.jcurl)
+
 execute_process(COMMAND swig -outdir ${SWIG_JAVA_OUT_DIR} -o ${SWIG_CPP_OUT_FILE_NAME} -java -package ${SWIG_JAVA_PACKAGE} ${SWIG_SOURCE_FILE})#-o ${SWIG_CPP_OUT_FILE_NAME} -package ${SWIG_JAVA_PACKAGE}
 set(SOURCE_FILES
         src/main/cpp/CommonHttpManager.cpp
@@ -18,13 +20,29 @@ set(SOURCE_FILES
         src/main/cpp/HttpResponse.h
         src/main/cpp/CAData.cpp
         src/main/cpp/CAData.h
-        src/main/cpp/native-lib.cpp
+        src/main/cpp/ccUtils.cpp
+        src/main/cpp/ccUtils.h
+        src/main/cpp/native-lib.c
         ${SWIG_CPP_OUT_FILE_NAME}
         )
-set(curl_path ${CMAKE_CURRENT_SOURCE_DIR}/app/src/main/cpp/curl/prebuilt/android/${ANDROID_ABI})
+
+add_library(curl STATIC IMPORTED)
+set(curl_path ${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp/curl/prebuilt/android/${ANDROID_ABI}/libcurl.a)
+set(curl_ssl ${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp/curl/prebuilt/android/${ANDROID_ABI}/libssl.a)
+set(curl_crypto ${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp/curl/prebuilt/android/${ANDROID_ABI}/libcrypto.a)
+
+set_target_properties(curl
+  PROPERTIES IMPORTED_LOCATION
+  ${curl_path})
+
+
+
 INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS} src/main/cpp/curl/include/android/curl src/main/cpp/Json/lib_json)
 find_library(log_lib log)
-add_library(
-        jcurl ${SOURCE_FILES}
+find_library(z_lib z)
+add_library(jcurl
+         SHARED
+        ${SOURCE_FILES}
 )
-target_link_libraries(jcurl ${log_lib} ${lib_json} ${curl_path})
+file(WRITE shang.txt ${curl})
+target_link_libraries(jcurl lib_json ${log_lib} ${curl_path} ${curl_ssl} ${curl_crypto} ${z_lib})
