--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,12 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags "-std=c++11 -frtti -fexceptions"
-                arguments "-DANDROID_ABI=arm64-v8a"
+                cppFlags "-std=c++11 -frtti -fexceptions -fpermissive"
+                arguments '-DANDROID_ABI=armeabi','-DANDROID_STL=gnustl_static','-DANDROID_TOOLCHAIN=gcc'
             }
+        }
+        ndk {
+            abiFilters  'armeabi'
         }
     }
     buildTypes {
