--- a/app/local.properties
+++ b/app/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 30 21:00:28 CST 2017
-ndk.dir=/Users/shang/AndroidSDK/ndk-bundle
-sdk.dir=/Users/shang/AndroidSDK
+#Fri Dec 01 10:18:50 CST 2017
+ndk.dir=C\:\\SDK\\ndk-bundle
+sdk.dir=C\:\\SDK
