--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -8,7 +8,7 @@ SET(SWIG_CPP_OUT_FILE_NAME src/main/cpp/curljni.cxx)
 SET(SWIG_JAVA_OUT_DIR src/main/java/s/docker/com/jcurl)
 SET(SWIG_JAVA_PACKAGE s.docker.com.jcurl)
 
-execute_process(COMMAND /usr/local/opt/swig@3.04/bin/swig -c++ -outdir ${SWIG_JAVA_OUT_DIR} -o ${SWIG_CPP_OUT_FILE_NAME} -java -package ${SWIG_JAVA_PACKAGE} ${SWIG_SOURCE_FILE})#-o ${SWIG_CPP_OUT_FILE_NAME} -package ${SWIG_JAVA_PACKAGE}
+execute_process(COMMAND swig -c++ -outdir ${SWIG_JAVA_OUT_DIR} -o ${SWIG_CPP_OUT_FILE_NAME} -java -package ${SWIG_JAVA_PACKAGE} ${SWIG_SOURCE_FILE})#-o ${SWIG_CPP_OUT_FILE_NAME} -package ${SWIG_JAVA_PACKAGE}
 
 set(SOURCE_FILES
         src/main/cpp/CurlUtil.cpp
@@ -28,15 +28,14 @@ set(SOURCE_FILES
 
 add_library(curl STATIC IMPORTED)
 
+
 set(curl_path ${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp/curl/prebuilt/android/${ANDROID_ABI}/libcurl.a)
 set(curl_ssl ${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp/curl/prebuilt/android/${ANDROID_ABI}/libssl.a)
 set(curl_crypto ${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp/curl/prebuilt/android/${ANDROID_ABI}/libcrypto.a)
 
-
 set_target_properties(curl
   PROPERTIES IMPORTED_LOCATION
   ${curl_path})
-
 
 INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS} src/main/cpp/curl/include/android/curl src/main/cpp/Json/lib_json)
 find_library(log_lib log)
