--- a/app/local.properties
+++ b/app/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 02 18:17:15 CST 2017
-ndk.dir=/Users/shang/AndroidSDK/ndk-bundle
-sdk.dir=/Users/shang/AndroidSDK
+#Tue Dec 05 12:10:34 CST 2017
+ndk.dir=C\:\\SDK\\ndk-bundle
+sdk.dir=C\:\\SDK
