--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -35,7 +35,9 @@ android {
             path "CMakeLists.txt"
         }
     }
-
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
 }
 
 dependencies {
