--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,10 +1,8 @@
 apply plugin: 'com.android.library'
 
 android {
+
     compileSdkVersion 26
-
-
-
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 26
@@ -15,15 +13,14 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11 -frtti -fexceptions -fpermissive"
-                arguments '-DANDROID_ABI=armeabi-v7a','-DANDROID_STL=gnustl_static'
+                arguments '-DANDROID_ABI=armeabi-v7a', '-DANDROID_STL=gnustl_static'
             }
         }
         ndk {
-            abiFilters  'armeabi-v7a'
+            abiFilters 'armeabi-v7a'
         }
 
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -35,14 +32,10 @@ android {
             path "CMakeLists.txt"
         }
     }
-
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+//    implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
